--- a/web/ui/css/main.css
+++ b/web/ui/css/main.css
@@ -683,3 +683,7 @@ font-weight: 600;
     margin: 0 auto;
     color:yellow;
 }
+.left_blue_box #login-form p.help-block{
+    padding-top: 0px;
+    padding-bottom: 0px;
+}
