--- a/web/ui/css/main.css
+++ b/web/ui/css/main.css
@@ -687,3 +687,7 @@ font-weight: 600;
     padding-top: 0px;
     padding-bottom: 0px;
 }
+
+#subscribe-newsletter-form .has-error input{
+    color: red;
+}
